--- a/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
+++ b/projects/app-ui/src/assets/styles/00-settings/_settings.bootstrap.scss
@@ -129,6 +129,8 @@ $utilities: map-merge(
                                 8: 8px,
                                 9: 9px,
                                 10: 10px,
+                                11: 11px,
+                                12: 12px,
                             )
                         ),
                 )
@@ -153,6 +155,8 @@ $utilities: map-merge(
                                 8: 8px,
                                 9: 9px,
                                 10: 10px,
+                                11: 11px,
+                                12: 12px,
                             )
                         ),
                 )
