--- a/projects/app-ui/src/app/features/orders/orders-list/orders-list.component.html
+++ b/projects/app-ui/src/app/features/orders/orders-list/orders-list.component.html
@@ -1,39 +1,103 @@
 <div class="container-fluid">
 	<app-page-header
 		[title]="'Orders'"
-		[actionButtons]="[
+		[breadcrumbItems]="[
 			{
-				visible: true,
-				disabled: false,
-				class: 'mat-raised-button w-100',
-				color: 'primary',
-				text: 'Login',
-				isWaiting: isWaiting
+				text: 'Orders',
+				link: '/orders'
+			},
+			{
+				text: 'List',
+				link: ''
 			}
 		]"
+		[actionButtons]="[
+			{
+				visible: !isLoading,
+				disabled: false,
+				class: 'mat-stroked-button',
+				color: 'primary',
+				text: 'Export',
+				isWaiting: false
+			},
+			{
+				visible: !isLoading,
+				disabled: false,
+				class: 'mat-flat-button',
+				color: 'primary',
+				text: 'Create Order',
+				isWaiting: false
+			}
+		]"
+		(buttonClick)="onPageHeaderActionClick($event)"
 	></app-page-header>
 	<div class="row">
-		<div class="col-sm-8">
+		<div class="col">
 			<mat-card>
 				<div class="d-flex">
-					<h1>Orders</h1>
-					<a class="ms-auto align-self-start" mat-button color="primary" [routerLink]="['add']">Create Order</a>
+					<h2>All Items</h2>
 				</div>
-				<p>orders-list works!</p>
-			</mat-card>
-		</div>
-		<div class="col-sm-4">
-			<mat-card>
-				<h5>Header 5</h5>
-				<p>paragraph</p>
-				<p class="mat-caption">caption</p>
-			</mat-card>
+				<mat-divider></mat-divider>
+				<div class="pt-4">
+					<table mat-table *ngIf="orders$ | async as orders" [dataSource]="orders" class="w-100 table-hover">
+						<!-- Order Column -->
+						<ng-container matColumnDef="InvoiceNumber">
+							<th mat-header-cell *matHeaderCellDef>Order#</th>
+							<td mat-cell *matCellDef="let element">{{ element.OrderNumberFormatted }}</td>
+						</ng-container>
 
-			<mat-card
-				><h5>Header 5</h5>
-				<p>paragraph</p>
-				<p class="mat-caption">caption</p>
+						<!-- Date Column -->
+						<ng-container matColumnDef="OrderDate">
+							<th mat-header-cell *matHeaderCellDef>Date</th>
+							<td mat-cell *matCellDef="let element">{{ element.OrderDate | date : 'dd-MM-yyyy' }}</td>
+						</ng-container>
+
+						<!-- status Column -->
+						<ng-container matColumnDef="StatusDescription">
+							<th mat-header-cell *matHeaderCellDef>Status</th>
+							<td mat-cell *matCellDef="let element">{{ element.StatusDescription }}</td>
+						</ng-container>
+
+						<!-- Customer Column -->
+						<ng-container matColumnDef="Customer">
+							<th mat-header-cell *matHeaderCellDef>Customer</th>
+							<td mat-cell *matCellDef="let element">
+								{{ element.CustomerName || element.CustomerEmail }} (#{{ element.CustomerProfileNumber }})
+							</td>
+						</ng-container>
+						<!-- ChannelName Column -->
+						<ng-container matColumnDef="ChannelName">
+							<th mat-header-cell *matHeaderCellDef>Customer</th>
+							<td mat-cell *matCellDef="let element">{{ element.ChannelName }}</td>
+						</ng-container>
+
+						<!-- Shipping Address Column -->
+						<ng-container matColumnDef="ShippingAddress">
+							<th mat-header-cell *matHeaderCellDef>Shipping Address</th>
+							<td mat-cell *matCellDef="let element">
+								{{ element.ShippingLocation.AddressLine1 }}<br />
+								{{ element.ShippingLocation.AddressLine2 }}<br />
+								{{ element.ShippingLocation.AddressLine3 }}
+							</td>
+						</ng-container>
+						<!-- Total Column -->
+						<ng-container matColumnDef="Total">
+							<th mat-header-cell *matHeaderCellDef>Total</th>
+							<td mat-cell *matCellDef="let element">
+								{{ element.GrandTotal }}
+							</td>
+						</ng-container>
+
+						<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+						<tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="viewRecord(row)"></tr>
+					</table>
+					<ng-container *ngIf="isLoading"> loading... </ng-container>
+				</div>
 			</mat-card>
 		</div>
 	</div>
 </div>
+
+<ng-template #loading>
+	<div class="mt-4">Loading...</div>
+</ng-template>
