--- a/projects/app-ui/src/assets/styles/03-elements/elements.links.scss
+++ b/projects/app-ui/src/assets/styles/03-elements/elements.links.scss
@@ -11,6 +11,9 @@ a {
 
 a.link {
   color: var(--theme-primary-500) !important;
+  &.router-link-active {
+    text-decoration: underline;
+  }
 }
 
 .cursor-pointer {
