feat: create products config structure
- configuration structure
- listing, view and form screens
- fix dialog issue

--- a/projects/app-ui/src/app/features/customers/feature/customer-add/customer-add.component.html
+++ b/projects/app-ui/src/app/features/customers/feature/customer-add/customer-add.component.html
@@ -9,7 +9,7 @@
 				},
 				{
 					text: vm.FullName,
-					link: '/customers/' + vm.Id
+					link: '/customers/' + vm.Id + '/personal-info'
 				},
 				{
 					text: 'Personal Info',
