--- a/projects/app-ui/src/app/shell/_components/dialog/dialog.component.html
+++ b/projects/app-ui/src/app/shell/_components/dialog/dialog.component.html
@@ -1,7 +1,7 @@
 <mat-dialog-content>
-	<div class="d-flex">
+	<!-- <div class="d-flex">
 		<mat-icon class="ms-auto" aria-hidden="false" (click)="onNoClick()"> close </mat-icon>
-	</div>
+	</div> -->
 
 	<!-- <ng-container *ngComponentOutlet="data?.component"></ng-container> -->
 	<ng-template #target></ng-template>
