--- a/projects/app-ui/src/app/shell/_components/shell-loading-bar/shell-loading-bar.component.html
+++ b/projects/app-ui/src/app/shell/_components/shell-loading-bar/shell-loading-bar.component.html
@@ -1,1 +1,1 @@
-<mat-progress-bar *ngIf="isLoading" mode="indeterminate" color="accent"></mat-progress-bar>
+<mat-progress-bar *ngIf="isLoading$ | async" mode="indeterminate" color="accent"></mat-progress-bar>
